--- a/pages/myadmin/myadmins.wxml
+++ b/pages/myadmin/myadmins.wxml
@@ -1,7 +1,8 @@
 <view class="container">
 
+  <!--顶部个人信息-->
   <view class="cells">
-    <view class="cell" bindtap="navToPage">
+    <view class="cell">
       <image class="head" src="{{userInfo.avatarUrl}}"></image>
       <view class="user-info">
         <text>{{userInfo.nickName}}</text>
@@ -9,7 +10,7 @@
     </view>
   </view>
 
-
+  <!--反馈-->
   <view class="">
     <view id="{{array.id[0]}}" class="cell {{array.changeColor[0]?'select':'normal'}}" data-id="0" data-route="faceback/facebacks" bindtap="navToPage" bindtouchstart="touchstart" bindtouchend="touchend" >
       <image class="cell-icon" src="../../images/feedback.png" ></image>
@@ -18,7 +19,7 @@
     </view>
   </view>
 
-
+  <!--联系电话-->
   <view class="hr">
     <view id="{{array.id[1]}}" class="cell {{array.changeColor[1]?'select':'normal'}}" data-id="1" data-route="about/abouts" bindtap="callPhone" bindtouchstart="touchstart" bindtouchend="touchend">
       <image class="cell-icon" src="../../images/telephone.png"></image>
@@ -27,7 +28,7 @@
     </view>
   </view>
 
-
+  <!--关于我们-->
   <view class="hr">
     <view id="{{array.id[2]}}" class="cell {{array.changeColor[2]?'select':'normal'}}" data-id="2" data-route="about/abouts" bindtap="navToPage" bindtouchstart="touchstart" bindtouchend="touchend">
       <image class="cell-icon" src="../../images/about.png"></image>
@@ -35,6 +36,15 @@
       <image class="cell-icon" src="../../images/forward.png"></image>
     </view>
   </view>
+
+  <!--我的收藏-->
+  <!--<view class="hr">
+    <view id="{{array.id[3]}}" class="cell {{array.changeColor[3]?'select':'normal'}}" data-id="3" data-route="collection/collection" bindtap="navToPage" bindtouchstart="touchstart" bindtouchend="touchend">
+      <image class="cell-icon" src="../../images/collection2.png"></image>
+      <text class="cell-text" bindtap>我的收藏</text>
+      <image class="cell-icon" src="../../images/forward.png"></image>
+    </view>
+  </view>-->
 
   
 </view>
