--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,43 +1,52 @@
 
 <!--index.wxml-->
-<scroll-view class="main" scroll-y="true" bindscrolltolower="lower" style="height:{{hs}}px">
+<!--<loading hidden="{{hidden}}" bindChange="loadingChange">
+  加载中...
+</loading>-->
+<scroll-view class="main" scroll-y="{{true}}"  bindscrolltolower="lower" style="height:{{hs}}px" bindscroll="scrollTo" scroll-top="{{scrollTop}}" bindscrolltoupper="refresh" upper-threshold="50px">
 
-  <view wx:for="{{list}}" class="info {{item.type==0? 'big' : 'little'}}">
+  <!--回到顶部按钮-->
+    <view class="backToTop" bindtap="backToTop" wx:if="{{floorstatus}}">
+      <image src="../../images/backToTop2.png"/>
+    </view>
+
+  <!--轮播图-->
+  <!--<swiper class="banner" indicator-dots="true" autoplay="true" interval="{{interval}}" duration="{{duration}}" circular="true">
+    <block wx:for="{{imgUrls}}">
+    <navigator url="../navigate/navigates?data={{item.sourceName}}·{{item.date}}&title={{item.title}}&id={{item.id}}">
+      <swiper-item class="swiper-item">
+        <text class="banner-title">{{item.title}}</text>
+        <image src="https://www.webozhong.com/weapp/thumbnails/{{item.thumbnails[0]}}" class="slide-image" />
+      </swiper-item>
+    </navigator>
+      
+    </block>
+  </swiper>-->
+
+  <view wx:for="{{list}}" class="info {{item.type==0? 'big' : 'little'}}" wx:key="{{item.id}}">
 
     <navigator url="../navigate/navigates?data={{item.sourceName}}·{{item.date}}&title={{item.title}}&id={{item.id}}" hover-class="navigator-hover" style="display:block;height:100%">
 
       <!--每一项的标题-->
       <text class="title" style="margin:5px 0;display:inline-block">{{item.title}}</text>
 
-      <view style="width:100%;height:50%;padding-bottom:5px">
-
+      <view style="width:100%;height:40%;padding-bottom:5px">
         <view class="type {{item.type==0? 'big' : 'little'}}">
-          <image style="width:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/weapp/thumbnails/{{item.thumbnails[0]}}">
+          <image style="width:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/thumbnails/{{item.thumbnails[0]}}">
           </image>
         </view>
-
-
         <view style="padding-left:2%" class="type {{item.type==0? 'big' : 'little'}}" hidden="{{item.type==0?  true : false}}">
-          <image style="width:100%;height:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/weapp/thumbnails/{{item.thumbnails[1]}}">
+          <image style="width:100%;height:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/thumbnails/{{item.thumbnails[1]}}">
           </image>
         </view>
-
-
-
         <view style="padding-left:2%" class="type {{item.type==0? 'big' : 'little'}}" hidden="{{item.type==0 ?  true : false}}">
-          <image style="width:100%;height:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/weapp/thumbnails/{{item.thumbnails[2]}}">
+          <image style="width:100%;height:100%; background-color: #fff;" mode="aspectFill" src="https://www.webozhong.com/thumbnails/{{item.thumbnails[2]}}">
           </image>
         </view>
-
-
       </view>
 
       <!--每一项的出处与时间-->
       <text class="source">{{item.sourceName}}·{{item.date}}</text>
-
-
     </navigator>
-
   </view>
-
 </scroll-view>
