--- a/pages/navigate/navigates.wxml
+++ b/pages/navigate/navigates.wxml
@@ -1,12 +1,14 @@
-<view class="title">{{title}}</view>
-
-<text class="data">{{data}}</text>
-
-<view class="content">
-
-  <view wx:for="{{num}}" wx:for-item="i">
-    <text wx:if="{{array.p[i]!=''&&i>0}}">{{array.p[i]}}</text>
-    <image src="https://www.webozhong.com/weapp/originals/{{array.img[i]}}" style="width:{{ws}}px;height:{{array.height[i]*ws/array.width[i]}}px" wx:if="{{array.img[i]!='empty.jpg'&&array.img[i]!='img.jpg'}}"></image>
+<view class="navigate">
+  <view class="title">{{title}}</view>
+  <text class="data">{{data}}</text>
+  <view class="content">
+    <view wx:for="{{num}}" wx:for-item="i">
+      <text wx:if="{{array.p[i]!=''&&i>0}}">{{array.p[i]}}</text>
+      <image src="https://www.webozhong.com/originals/{{array.img[i]}}" style="width:{{ws}}px;height:{{array.height[i]*ws/array.width[i]}}px" wx:if="{{array.img[i]!='empty.jpg'&&array.img[i]!='img.jpg'}}"></image>
+    </view>
+    <!--<view class="bottomBar">
+      <image src="../../images/collection2.png" class="collection"></image>
+      <text class="tip">未收藏</text>
+    </view>-->
   </view>
-  
 </view>
