--- a/pages/myadmin/collection/collections.wxss
+++ b/pages/myadmin/collection/collections.wxss
@@ -1,11 +1,20 @@
-.main{
-    padding:10px;
-    border-bottom:1px solid #ccc;
+.main {
+  margin: 4%;
+  border-bottom: 1px solid #ccc;
+  font-family: "华文细黑"
 }
-.title{
-    font-size:50rpx;
+.nav{
+  height: max-content;
 }
-.source{
-    font-size:30rpx;
-    color:#ccc;
+.text{
+  width: 70%;
+  float: left;
+}
+.title {
+  float: left;
+  font-size: 36rpx;
+}
+.thumbnails {
+  width: 30%;
+  height: 150rpx;
 }
