--- a/pages/myadmin/collection/collections.wxml
+++ b/pages/myadmin/collection/collections.wxml
@@ -1,8 +1,10 @@
 <scroll-view scroll-y="{{true}}" lower-threshold="100px" bindscrolltolower="lower" style="height:{{hs}}px">
-  <view class="main" wx:for="{{collections}}">
-    <navigator url="../../navigate/navigates?data={{item.sourceName}}·{{item.date}}&title={{item.title}}&id={{item.id}}" hover-class="navigator-hover" style="display:block;height:100%">
-      <text class="title" style="margin:5px 0;display:inline-block" >风景画的真好，脱俗田园，我愿身临其境</text>
-      <text class="source">最绘画</text>
+  <view class="main"wx:for="{{list}}"wx:key="list">
+    <navigator class="nav" url="../../navigate/navigates?data={{item.sourceName}}·{{item.date}}&title={{item.title}}&id={{item.id}}" hover-class="navigator-hover">
+      <view class="text">
+        <text class="title">{{item.title}}</text>
+      </view>
+      <image class="thumbnails" src="https://www.webozhong.com/thumbnails/{{item.thumbnails}}"></image>
     </navigator>
   </view>
 </scroll-view>
