--- a/pages/share/shares.wxml
+++ b/pages/share/shares.wxml
@@ -1,16 +1,14 @@
+<!--pages/share/shares.wxml-->
 <view class="navigate">
+<navigator url="/pages/index/index"hover-class="navigator-hover" open-type="switchTab" class="more">
+  <text class="moretext">点击浏览更多推荐内容</text>
+</navigator>
   <view class="title">{{title}}</view>
   <text class="date">{{date}}</text>
   <view class="content">
-    <view wx:for="{{num}}" wx:for-item="i"wx:key="num">
+    <view wx:for="{{num}}" wx:for-item="i" wx:key="num">
       <text wx:if="{{array.p[i]!=''&&i>0}}">{{array.p[i]}}</text>
       <image src="https://www.webozhong.com/originals/{{array.img[i]}}" style="width:{{ws}}px;height:{{array.height[i]*ws/array.width[i]}}px" wx:if="{{array.img[i]!='empty.jpg'&&array.img[i]!='img.jpg'}}"></image>
-    </view>
-    <view class="bottomBar">
-      <image src="../../images/{{isCollection}}collection.png" class="collection" bindtap="onclick">
-      </image>
-      <text class="tip">{{isCollectionText}}</text>
-      <text class="tiptext">已有{{collNum}}人收藏</text>
     </view>
   </view>
 </view>
