--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,41 +1,47 @@
 .container{
   width: 100%;
+  height: 100%;
 }
 .logo{
-  display: flex;
-  justify-content:center;
+  display: inline-block;
+  margin: 10% 20% 0% 20%;
+  width: 60%;
+}
+.logo image{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+.features,.inductive{
+  margin: 10% 4% 0% 4%;
+  display: inline-block;
+
+}.inductive{
+  margin: 2% 4% 10% 4%;
+}
+.features text,.inductive text{
+  margin: 1% 0% 1% 0%;
+  font-size: 28rpx;
+  font-family: "Microsoft YaHei UI";
+  display: block;
+}
+.features .title,.inductive .title{
+  margin: 2% 0% 2% 0%;
+  font-size: 40rpx;
+  font-family: "Microsoft YaHei UI";
+  display: block;
+}
+.inductive .phone{
+  color: #2A8AE0;
 }
 
-.logo-image{
-  height: 80rpx;
-  width: 327rpx;
-  display: flex;
-  justify-content: center;
-  margin-top: 30%;
-  background: white;
-}
-.share{
-  width: 70%;
-  height: 6%;
-  display: flex;
-  justify-content: center;
-  margin-top: 30%;
-  margin-left: 15%;
-  background: #2A8AE0;
-  border-radius: 6rpx;
-  
-}
-.share text{
-  display: flex;
-  color: white;
+.copyright{
   text-align: center;
   font-family: "Microsoft YaHei UI";
   font-size: 36rpx;
-  align-items:center;
 }
-.copyright{
-  margin-top: 50%;
+.copyright text{
+  display: inline-block;
   text-align: center;
-  font-family: "Microsoft YaHei UI";
-  font-size: 28rpx;
 }
+
