--- a/pages/navigate/navigate.wxml
+++ b/pages/navigate/navigate.wxml
@@ -2,7 +2,6 @@
   <!-- 标题 -->
   <view class="title">{{title}}</view>
   <!-- 出处 -->
- 
   <text class="date">{{date}}</text>
   <!-- 内容 -->
   <view class="content">
@@ -17,16 +16,16 @@
     <view class="bottomBar">
 
       <!-- 收藏 -->
-      <view class="item1 item">
-        <image src="../../images/{{isCollection}}collection.png" class="collection" bindtap="onclick">
+      <view class="item1 item" bindtap="onclick">
+        <image src="../../images/{{isCollection}}collection.png" class="collection">
         </image>
         <text class="tip">收藏</text>
       </view>
       <!-- <text class="tiptext">已有{{collNum}}人收藏</text>  -->
 
       <!-- 评论 -->
-      <view class="item2 item">
-        <image src="../../images/feedback.png" class="comment" bindtap="comment"></image>
+      <view class="item2 item" bindtap="comment">
+        <image src="../../images/feedback.png" class="comment"></image>
         <text class="commentTip">评论</text>
       </view>
 
@@ -34,14 +33,15 @@
       <view class="item3 item">
         <button open-type="share" class="share">
           <image src="../../images/share.png" class="shareImg"></image>
+          <text class="shareTip">分享</text>
         </button>
-        <text class="shareTip">分享</text>
+        
       </view>
       
     </view>
     <!-- 评论输入框 -->
-    <input value="{{value}}" type="text" placeholder="请输入您的评论" confirm-type="send" class="input" style="display:{{iDisplay}}" bindinput="getComment" focus="{{isFocus}}"/>
-    <button class="send" type="primary" style="display:{{iDisplay}}" bindtap="send" disabled="{{isDisabled}}">发送</button>
+    <input value="{{value}}" type="text" placeholder="请输入您的评论" confirm-type="send" class="input" style="display:{{iDisplay}}" bindinput="getComment" focus="{{isFocus}}" maxlength="120"/>
+    <button class="send" type="primary" style="display:{{iDisplay}}" bindtap="send" disabled="{{isDisabled}}">发表</button>
 
     <!-- 评论输入框获取焦点时，显示遮罩层 -->
   <view class="mask" style="width:100%;height:{{hs}}px ;display:{{vDisplay}}" bindtap="mask"></view>
@@ -50,8 +50,10 @@
 
   <!-- 用户评论区 -->
   <view class="comments">
+    <!-- <view class="left"></view>  -->
     <text class="title2">用户评论</text>
-    <view class="noComment" hidden="{{isComment1}}">目前还没有评论，赶快来评论一下吧！</view>
+    <!-- <view class="right"></view>   -->
+    <view class="noComment" hidden="{{isComment1}}">目前还没有评论，赶快留下您的金玉良言吧！</view>
     <view wx:for="{{commentArray}}" class="commentItem" hidden="{{isComment2}}" wx:key="item.id">
       <image src="{{item.userInfo[0].avatarUrl}}" class="avatar"></image>
       <text class="nickName">{{item.userInfo[0].nickName}}</text>
@@ -60,3 +62,5 @@
     </view>
   </view>
 </view>
+
+
