--- a/pages/navigate/navigate.wxss
+++ b/pages/navigate/navigate.wxss
@@ -11,11 +11,12 @@
     font-weight:bold;
 }
 text{
-    display: inline-block;
+    display: block;
     font-size: 32rpx;
     line-height: 50rpx;
     font-family: "黑体";
     margin:0 20rpx;
+    
 }
 image{
     width: 100%;
@@ -76,12 +77,13 @@ image{
 .center{
   text-align:center;
 }
+.item3{
+  position:relative;
+}
 .share{
   position:relative;
-  /*left:330rpx;
-  top:24rpx; */
   display: block;
-  width:55rpx;
+  width:160rpx;
   height:55rpx;
   background-color:#fff;
 }
@@ -94,14 +96,14 @@ image{
   left:0;
   top:0; 
   display: block;
-  width:100%;
-  height:100%;
+  width:55rpx;
+  height:55rpx;
   margin:0; 
 }
 .shareTip{
-  /* position:absolute;
-  left:380rpx;
-  top:26rpx; */
+  position:absolute; 
+  left:60rpx;
+  top:0rpx; 
   color: #9499A0;
   font-size: 30rpx;
   font-family: "微软雅黑";
@@ -130,7 +132,7 @@ image{
   bottom:0;
   width:100%;
   height:100rpx;
-   border:1px solid #eee; 
+  border:1px solid #eee; 
    /* border-top:1px solid #000;
   border-bottom:1px solid #000;  */
   z-index: 10;
@@ -174,20 +176,43 @@ image{
   padding-left:20rpx;
   padding-right:20rpx;
   padding-top:100rpx;
-  background-color: #ebedef;
+  background-color: #ebedef; 
+  overflow: hidden;
 }
 .commentItem{
   padding-left:20rpx;
-  border-bottom:1px solid #9499A0;
+  border-bottom:1px solid #ccc;
   margin-bottom:30rpx;
 }
 .title2{
-  font-size:50rpx;
-  font-weight:bold;
+  margin:0 auto;
+  display: block;
+  font-size:35rpx;
+  text-align: center;
   margin-bottom:100rpx;
+  color:#9499A0;
+  width:160rpx;
+  /* float:left; */
 }
+.left{
+  width:255rpx;
+  height:3px;
+  border-bottom:3px dotted #868686;
+  float:left;
+  padding-top:24rpx;
+}
+.right{
+  width:255rpx;
+  height:3px;
+  border-bottom:3px dotted #868686;
+  float:left;
+  padding-top:24rpx;
+}
+
+
 /* 头像 */
 .avatar{
+  clear: both;
   display: block;
   width:70rpx;
   height:70rpx;
@@ -220,7 +245,11 @@ image{
   padding-left:70rpx;
 }
 .noComment{
+  clear: both;
   display: block;
-  margin-left:20rpx;
+  /* margin-left:20rpx; */
   font-size:30rpx;
+  text-align: center;
+  color:#9499A0;
 }
+
