--- a/pages/navigate/navigate.wxss
+++ b/pages/navigate/navigate.wxss
@@ -1,71 +1,77 @@
-/* pages/navigate/navigates.wxss */
 .title {
-    /*border: 1px red solid;*/
-    font-family: "微软雅黑";
-    font-size:44rpx;
-    text-align: center;
-    margin-left: 30rpx;
-    margin-right: 30rpx; 
-    margin-bottom: 10rpx;
-    margin-top: 40rpx; 
-    font-weight:bold;
+  font-family: "微软雅黑";
+  font-size: 44rpx;
+  text-align: center;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
+  margin-bottom: 10rpx;
+  margin-top: 40rpx;
+  font-weight: bold;
 }
-text{
-    display: block;
-    font-size: 32rpx;
-    line-height: 50rpx;
-    font-family: "黑体";
-    margin:0 20rpx;
-    
+
+text {
+  display: block;
+  font-size: 32rpx;
+  line-height: 50rpx;
+  font-family: "黑体";
+  margin: 0 20rpx;
 }
-image{
-    width: 100%;
-    margin-top:30rpx;
+
+image {
+  width: 100%;
+  margin-top: 30rpx;
 }
-.date{
-    font-size: 24rpx;
-    margin-bottom:14rpx;
-    /*font-weight:bold;*/
-    color:#ccc;
+
+.date {
+  font-size: 24rpx;
+  margin-bottom: 14rpx;
+  /*font-weight:bold;*/
+  color: #ccc;
 }
-.content{
-    width:100%;
-    padding-bottom:200rpx;
+
+.content {
+  width: 100%;
+  padding-bottom: 200rpx;
 }
-.bottomBar{
-    width:100%;
-    height:100rpx;
-    background-color: #FFFFFF;
-    border-top: 1px #E3E4E3 solid;
-    position:fixed;
-    bottom:0;
-    left:0;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 2;
+
+.bottomBar {
+  width: 100%;
+  height: 100rpx;
+  background-color: #fff;
+  border-top: 1px #e3e4e3 solid;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 2;
 }
-.bottomBar .item{
+
+.bottomBar .item {
   display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
-.collection{
-    /* position:absolute;
+
+.collection {
+  /* position:absolute;
     left:120rpx;
     top:-10rpx; */
-    width:60rpx;
-    height:60rpx;
-    margin-top:0;
+  width: 60rpx;
+  height: 60rpx;
+  margin-top: 0;
 }
-.tip{
-    /* position:absolute;
+
+.tip {
+  /* position:absolute;
     left:170rpx;
     top:26rpx; */
-    color: #9499A0;
-    font-size: 30rpx;
-    font-family: "微软雅黑";
+  color: #9499a0;
+  font-size: 30rpx;
+  font-family: "微软雅黑";
 }
+
 /* .tiptext{
   position: absolute;
   right: 30rpx;
@@ -74,182 +80,216 @@ image{
   color: #9499A0;
   font-family: "微软雅黑";
 } */
-.center{
-  text-align:center;
+
+.center {
+  text-align: center;
 }
-.item3{
-  position:relative;
+
+.item3 {
+  position: relative;
 }
-.share{
-  position:relative;
+
+.share {
+  position: relative;
   display: block;
-  width:160rpx;
-  height:55rpx;
-  background-color:#fff;
+  width: 160rpx;
+  height: 55rpx;
+  background-color: #fff;
 }
+
 /*去除按钮边框*/
-.share:after{
-  border:none;
+
+.share:after {
+  border: none;
 }
-.share .shareImg{
-  position:absolute;
-  left:0;
-  top:0; 
+
+.share .shareImg {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: block;
-  width:55rpx;
-  height:55rpx;
-  margin:0; 
+  width: 55rpx;
+  height: 55rpx;
+  margin: 0;
 }
-.shareTip{
-  position:absolute; 
-  left:60rpx;
-  top:0rpx; 
-  color: #9499A0;
+
+.shareTip {
+  position: absolute;
+  left: 60rpx;
+  top: 0rpx;
+  color: #9499a0;
   font-size: 30rpx;
   font-family: "微软雅黑";
 }
-.comment{
+
+.comment {
   /* position:absolute;
   left:510rpx;
   top:-10rpx; */
-  width:60rpx;
-  height:60rpx;
-  margin-top:0;
+  width: 60rpx;
+  height: 60rpx;
+  margin-top: 0;
 }
-.commentTip{
+
+.commentTip {
   /* position:absolute;
   left:560rpx;
   top:24rpx; */
-  color: #9499A0;
+  color: #9499a0;
   font-size: 30rpx;
   font-family: "微软雅黑";
 }
 
 /* 输入框 */
-.input{
-  position:fixed;
-  left:0;
-  bottom:0;
-  width:100%;
-  height:100rpx;
-  border:1px solid #eee; 
-   /* border-top:1px solid #000;
+
+.input {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100rpx;
+  border: 1px solid #eee;
+  /* border-top:1px solid #000;
   border-bottom:1px solid #000;  */
   z-index: 10;
-  padding-left:20rpx;
-  padding-right:200rpx;
+  padding-left: 20rpx;
+  padding-right: 200rpx;
   /* border-radius:15rpx; */
 }
+
 /* 遮罩层 */
-.mask{
+
+.mask {
   background-color: rgba(0, 0, 0, 0.3);
-  position:fixed;
-  left:0;
-  top:0;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
+
 /* 底部遮罩层 */
-.bMask{
-  position:fixed;
-  left:0;
-  bottom:0;
-  width:100%;
-  height:100rpx;
+
+.bMask {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100rpx;
   background-color: #fff;
   z-index: 5;
 }
+
 /* 发送按钮 */
-.send{
-  width:120rpx;
-  height:60rpx;
-  position:fixed;
-  right:20rpx;
-  bottom:20rpx;
-  font-size:30rpx;
+
+.send {
+  width: 120rpx;
+  height: 60rpx;
+  position: fixed;
+  right: 20rpx;
+  bottom: 20rpx;
+  font-size: 30rpx;
   line-height: 60rpx;
-  z-index:11;
+  z-index: 11;
 }
 
 /* 评论区样式 */
-.comments{
-  width:100%;
-  padding-bottom:150rpx;
-  padding-left:20rpx;
-  padding-right:20rpx;
-  padding-top:100rpx;
-  background-color: #ebedef; 
+
+.comments {
+  width: 100%;
+  padding-bottom: 50rpx;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+  padding-top: 50rpx;
+  background-color: #f3f3f3;
   overflow: hidden;
 }
-.commentItem{
-  padding-left:20rpx;
-  border-bottom:1px solid #ccc;
-  margin-bottom:30rpx;
-}
-.title2{
-  margin:0 auto;
-  display: block;
-  font-size:35rpx;
-  text-align: center;
-  margin-bottom:100rpx;
-  color:#9499A0;
-  width:160rpx;
-  /* float:left; */
-}
-.left{
-  width:255rpx;
-  height:3px;
-  border-bottom:3px dotted #868686;
-  float:left;
-  padding-top:24rpx;
-}
-.right{
-  width:255rpx;
-  height:3px;
-  border-bottom:3px dotted #868686;
-  float:left;
-  padding-top:24rpx;
+
+.commentItem {
+  padding-left: 20rpx;
+  margin-bottom: 10rpx;
 }
 
+.commentTitle {
+  margin: 0 auto;
+  display: block;
+  font-size: 30rpx;
+  text-align: center;
+  margin-bottom: 50rpx;
+  color: #989898;
+  width: 20%;
+  float: left;
+  font-family: Microsoft YaHei UI;
+}
+
+.left {
+  width: 40%;
+  height: 3px;
+  border-bottom: 2rpx solid #989898;
+  float: left;
+  padding-top: 24rpx;
+}
+
+.right {
+  width: 40%;
+  height: 3px;
+  border-bottom: 2rpx solid #989898;
+  float: right;
+  padding-top: 24rpx;
+}
 
 /* 头像 */
-.avatar{
+
+.avatar {
   clear: both;
   display: block;
-  width:70rpx;
-  height:70rpx;
-  border-radius: 50%;
-  float:left;
-  margin-top:0;
-}
-/* 昵称 */
-.nickName{
-  font-size:30rpx;
-  float:left;
-  margin-left:20rpx;
-  margin-bottom:30rpx;
-}
-/* 评论内容 */
-.contents{
-  font-size:36rpx;
-  display:block;
-  clear:both;
-  padding-left: 70rpx;
-  padding-right:40rpx;
-  margin-bottom:10rpx;
-  /* 设置或检索当内容超过指定容器的边界时是否断行。 */
-  overflow-wrap:break-word;/*内容将在边界内换行。如果需要，单词内部允许断行。*/
-}
-/* 评论时间 */
-.time{
-  font-size:25rpx;
-  color:#ccc;
-  padding-left:70rpx;
-}
-.noComment{
-  clear: both;
-  display: block;
-  /* margin-left:20rpx; */
-  font-size:30rpx;
-  text-align: center;
-  color:#9499A0;
+  width: 80rpx;
+  height: 80rpx;
+  float: left;
+  margin-top: 0;
 }
 
+/* 昵称 */
+
+.nickName {
+  font-size: 34rpx;
+  color: #7b7b7b;
+  font-family: '微软雅黑';
+  line-height: 80rpx;
+  float: left;
+  /* margin-left:25rpx;
+  margin-bottom:25rpx; */
+}
+
+/* 评论内容 */
+
+.contents {
+  font-size: 30rpx;
+  font-family: '微软雅黑';
+  display: block;
+  clear: both;
+  padding-left: 80rpx;
+  padding-right: 40rpx;
+  /* margin-bottom:10rpx; *//* 设置或检索当内容超过指定容器的边界时是否断行。 */
+  overflow-wrap: break-word; /*内容将在边界内换行。如果需要，单词内部允许断行。*/
+}
+
+/* 评论时间 */
+
+.time {
+  font-size: 25rpx;
+  color: #7b7b7b;
+  padding-left: 80rpx;
+}
+
+.noComment {
+  clear: both;
+  display: block;
+  margin-left: 20rpx;
+  font-size: 30rpx;
+  text-align: center;
+  color: #7b7b7b;
+  line-height: 360rpx;
+}
+
+.bottom {
+  margin-bottom: 80rpx;
+}
